# videoDR-Agent

./: .gitignore  README.md  config.yaml  env.example  eval.py  pyproject.toml
src/agentic_deep_research/: configuration.py  deep_researcher.py  prompts.py  state.py  utils.py
src/agentic_deep_research/nodes/: researcher.py  supervisor.py  supervisor_tools.py
